--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -6,9 +6,9 @@ body {
 }
 
 :root {
-    --violet: #9356DC;
-    --rose: #FF79DA;
-    --menthe: #99E2D0;
+    --couleur-primaire: #9356DC;
+    --couleur-secondaire: #FF79DA;
+    --couleur-tertiaire: #99E2D0;
 }
 
 * {
@@ -75,7 +75,7 @@ body {
 }
 
 .bouton-explorer {
-    background-image: linear-gradient(var(--rose), var(--violet));
+    background-image: linear-gradient(var(--couleur-secondaire), var(--couleur-primaire));
     padding: 15px 20px;
     font-size: medium;
     border: none;
@@ -122,14 +122,14 @@ body {
 }
 
 .couleur-icone-restaurant {
-    color: var(--violet);
+    color: var(--couleur-primaire);
 }
 
 .cercle-chiffres-fonctionnement {
     height: 20px;
     width: 20px;
     border-radius: 25px;
-    background-color: var(--violet);
+    background-color: var(--couleur-primaire);
 }
 
 .position-cercle-fonctionnement {
@@ -176,7 +176,7 @@ body {
 }
 
 .nouveau-restaurant {
-    background-color: var(--menthe);
+    background-color: var(--couleur-tertiaire);
     color: darkgreen;
     padding: 0.375rem;
     border-radius: 0.1875rem;
@@ -217,7 +217,7 @@ body {
 
 .fas {
     color: transparent;
-    background-image: linear-gradient(var(--violet), var(--rose));
+    background-image: linear-gradient(var(--couleur-primaire), var(--couleur-secondaire));
     background-clip: text;
     -webkit-background-clip: text;
     opacity: 0;
