--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -2,7 +2,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin: 0px;
 }
 
 :root {
@@ -50,6 +49,70 @@ body {
     margin: 0;
 }
 
+.position-fixed {
+    position: fixed;
+}
+
+.font-size-medium {
+    font-size: medium;
+}
+
+.margin-top-45px {
+    margin-top: 45px;
+}
+
+.display-align-center {
+    display: flex;
+    align-items: center;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.position-absolute {
+    position: absolute;
+}
+
+.gap-10px {
+    gap: 10px;
+}
+
+/* Loading Spinner */
+
+.loader {
+    height: 100vh;
+    inset: 0px;
+    z-index: 1;
+    opacity: 0.9;
+    animation: fadeOut 2s 2s forwards; 
+    transform-origin: top;
+}
+
+@keyframes fadeOut {
+    to {
+    visibility: hidden;
+}
+}
+
+.spinner {
+    background: var(--couleur-primaire);
+    border: 5px solid var(--couleur-tertiaire);
+    border-top: 5px solid var(--couleur-secondaire);
+    width: 50px;
+    border-radius: 50%;
+    animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+}
+
 /* Header */
 
 .logo {
@@ -77,7 +140,6 @@ body {
 .bouton-explorer {
     background-image: linear-gradient(var(--couleur-secondaire), var(--couleur-primaire));
     padding: 15px 20px;
-    font-size: medium;
     border: none;
     box-shadow: 0px 5px 5px 0px rgb(204, 204, 204);
     border-radius: 30px;
@@ -92,16 +154,8 @@ body {
 
 /* Fonctionnement ohmyfood */
 
-.fonctionnement-ohmyfood {
-    margin-top: 45px;
-}
-
 .position-titre-fonctionnement {
     margin-left: 15px;
-}
-
-.taille-titre-fonctionnement {
-    font-size: medium;
 }
 
 .conteneur-fonctionnement {
@@ -115,13 +169,15 @@ body {
     cursor: pointer;
 }
 
-.flexbox-blocs-fonctionnement {
-    display: flex;
-    align-items: center;
+.gap-blocs-fonctionnement {
     gap: 20px;
 }
 
-.couleur-icone-restaurant {
+.couleur-icones-fonctionnement {
+    color: rgb(126, 126, 126);
+}
+
+.conteneur-fonctionnement:hover .couleur-icones-fonctionnement {
     color: var(--couleur-primaire);
 }
 
@@ -139,7 +195,6 @@ body {
 /* Restaurants disponibles */
 
 .position-conteneur-restaurants {
-    margin-top: 45px;
     padding-bottom: 60px;
 }
 
@@ -171,28 +226,13 @@ body {
     border-radius: 0.625rem 0.625rem 0rem 0rem;
 }
 
-.position-relative {
-    position: relative;
-}
-
 .nouveau-restaurant {
     background-color: var(--couleur-tertiaire);
     color: darkgreen;
     padding: 0.375rem;
     border-radius: 0.1875rem;
-    position: absolute;
     top: 7%;
     right: 3%;
-}
-
-.position-icone-coeur {
-    position: absolute;
-    right: 7%;
-    top: 25%;
-}
-
-.taille-icone-coeur {
-    font-size: 1.6em;
 }
 
 .informations-restaurants-disponibles {
@@ -210,7 +250,6 @@ body {
 
 .classe-icone {
     font-size: 2em;
-    position: absolute;
     right: 7%;
     top: 25%;
 }
@@ -237,11 +276,6 @@ footer {
     padding: 30px 0px 25px 0px;
 }
 
-.flex-footer {
-    display: flex;
-    flex-direction: column;
-}
-
 .titre-footer-ohmyfood {
     font-family: 'Shrikhand', sans-serif;
     font-size: 1.17em;
@@ -251,13 +285,7 @@ footer {
 
 ul {
     list-style-type: none;
-    gap: 10px;
     padding-left: 30px
-}
-
-.align-center-li {
-    display: flex;
-    align-items: center;
 }
 
 .text-decoration-none {
@@ -270,8 +298,4 @@ footer p:hover {
 
 .gap-footer-1 {
     gap: 16.5px;
-}
-
-.gap-footer-2 {
-    gap: 10px;
 }
