Changement nom classe

--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -265,9 +265,9 @@ header {
     padding-top: 0.9375rem;
 }
 
-.padding-paragraphe-restaurants {
-    padding-bottom: 1.25rem;
-    padding-top: 0.3125rem;
+.margin-paragraphe-restaurants {
+    margin-bottom: 1.25rem;
+    margin-top: 0.3125rem;
 }
 
 .classe-icone {
