Changement nom classe HTML/CSS

--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -261,8 +261,8 @@ header {
     margin-left: 0.9375rem;
 }
 
-.padding-titre-restaurants {
-    padding-top: 0.9375rem;
+.margin-titre-restaurants {
+    margin-top: 0.9375rem;
 }
 
 .margin-paragraphe-restaurants {
