--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -306,8 +306,8 @@ footer {
 .titre-footer-ohmyfood {
     font-family: 'Shrikhand', sans-serif;
     font-size: 1.17em;
-    padding-bottom: 15px;
-    padding-left: 30px;
+    margin-bottom: 15px;
+    margin-left: 30px;
 }
 
 ul {
