--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -222,7 +222,7 @@ header {
 
 .position-titre-restaurants {
     padding-top: 45px;
-    padding-left: 20px;
+    margin-left: 20px;
 }
 
 .flexbox-restaurants-global {
