--- a/styles/menu.css
+++ b/styles/menu.css
@@ -211,7 +211,7 @@ a {
 .conteneur-articles:hover .position-prix {
     padding-left: 15px;
     padding-right: 90px;
-    transition: 500ms ease;
+    transition: 500ms;
 }
 
 @keyframes iconSpin {
